# djc-phosphor-icons

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  update-icons.yml
djc_phosphor_icons/: __init__.py  app_settings.py  apps.py
djc_phosphor_icons/components/: icon.py
scripts/: check_new_icons.py  download_icons.py  preview_icons.py
tests/: settings.py  test_icons.py
