[project]
name = "djc-phosphor-icons"
version = "0.0.2"
description = "Phosphor Icons as django-components"
readme = "README.md"
authors = [
    { name = "Joey Jurjens", email = "joeyjurjens@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "django>=5.2",
    "django-components",
]

[tool.hatch.build.targets.wheel]
packages = ["djc_phosphor_icons"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-django>=4",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
